# rust-trezor-api

./: .gitignore  Cargo.toml  README.md  generate-protos.sh
examples/: change_pin.rs  features.rs  find.rs  interaction.rs  sign_message.rs  sign_tx.rs  signing.rs
src/: client.rs  constants.rs  error.rs  lib.rs  messages.rs  protocol.rs  trezor.rs  utils.rs
src/flows/: sign_tx.rs
src/protos/: messages.rs  messages_bitcoin.rs  messages_bootloader.rs  messages_cardano.rs  messages_common.rs  messages_crypto.rs  messages_debug.rs  messages_ethereum.rs  messages_lisk.rs  messages_management.rs  messages_monero.rs  messages_nem.rs  messages_ontology.rs  messages_ripple.rs  messages_stellar.rs  messages_tezos.rs  messages_tron.rs  mod.rs
src/transport/: error.rs  hid.rs  messages.rs  mod.rs  protocol.rs  webusb.rs
